--- a/package.json
+++ b/package.json
@@ -10,79 +10,46 @@
     "group0-part1-1.0": "rm -rf $npm_package_config_installDir",
     "group0-part2-2.1": "cd .. && mkdir $npm_package_config_installDir",
     "group0-part2-2.2": "cd $npm_package_config_installDir && go mod init $npm_package_config_repoName",
+
+    "group0-part3-3.1.0": "echo about to: server.go",
     "group0-part3-3.1": "wget -nv -O $npm_package_config_installDir/server.go $npm_package_config_hello1/server.go",
     "group0-part3-3.2": "cd $npm_package_config_installDir && pwd && ls -lat",
     "group0-part3-3.3": "cd $npm_package_config_installDir && echo $npm_package_config_installDir",
-    "group0-part3-3.4": "wget -nv -O $npm_package_config_installDir/server.go $npm_package_config_hello1/server.go",
-    "group0-part3-3.5": "cd $npm_package_config_installDir && go run $npm_package_config_installDir/server.go &",
-    "group0-part3-3.6": "echo end part 3",
+    "group0-part3-3.5": "cd $npm_package_config_installDir && go run $npm_package_config_installDir/server.go",
+    "group0-part3-3.6": "echo end part 3 we just ran server.go THIS ALWAYS FAILS PORT 3000 IS IN USE",
 
+    "group0-part4-4.1.0": "echo about to: main.go",
     "group0-part4-4.1": "wget -nv -O $npm_package_config_installDir/main.go $npm_package_config_hello1/main.go",
-    "group0-part4-4.2": "cd $npm_package_config_installDir && go run $npm_package_config_installDir/main.go &",
     "group0-part4-4.3": "echo end part 4",
 
+    "group0-part5-5.1.0": "echo about to: vue create frontend",
     "group0-part5-5.1": "cd $npm_package_config_installDir && vue create frontend",
     "group0-part5-5.2": "rm -rf $npm_package_config_installDir/frontend/assets",
     "group0-part5-5.3": "rm -rf $npm_package_config_installDir/frontend/components",
     "group0-part5-5.4": "rm -rf $npm_package_config_installDir/frontend/.git",
 
+    "group0-part5-5.5.0": "echo about to: .gitignore",
     "group0-part5-5.5": "mv $npm_package_config_installDir/frontend/.gitignore $npm_package_config_installDir",
     "group0-part5-5.6": "echo '/frontend/node_modules' >> $npm_package_config_installDir/.gitignore",
 
-    "group0-part5-5.7.0": "echo need correct blog commit for App.vue and index.html",
-    "group0-part5-5.7": "wget -nv -O $npm_package_config_installDir/frontend/App.vue $npm_package_config_hello1/App.vue",
-    "group0-part5-5.8": "wget -nv -O $npm_package_config_installDir/frontend/App.vue $npm_package_config_hello1/index.html",
-    "group0-part5-5.9": "cd $npm_package_config_installDir/frontend && yarn serve &",
-    "group0-part5-5.10": "echo $npm_package_config_installDir/frontend and then yarn serve",
-    "group0-part5-5.11": "echo end part 5",
+    "group0-part5-5.7.0": "echo about to: App.vue",
+    "group0-part5-5.7": "wget -nv -O $npm_package_config_installDir/frontend/src/App.vue $npm_package_config_hello1/App.vue",
+    "group0-part5-5.9": "wget -nv -O $npm_package_config_installDir/frontend/public/index.html $npm_package_config_hello1/index.html",
+    "group0-part5-5.11": "echo $npm_package_config_installDir/frontend and then yarn serve NEED BETTER OPENING BROWSER INCREMENTING PORT 8080",
+    "group0-part5-5.12": "echo end hello world part 5 - check localhost:3000 for go server and localhost:8080 for vue server",
+    
+
+    "xgroup0-part3-3.4": "wget -nv -O $npm_package_config_installDir/server.go OMIT DUPLICATE $npm_package_config_hello1/server.go",
+    "xgroup0-part4-4.2": "cd $npm_package_config_installDir OMIT OMIT OMIT && go run $npm_package_config_installDir/main.go",
+    "xgroup0-part5-5.8": "wget -nv -O $npm_package_config_installDir/frontend/App.vue OMIT LINE $npm_package_config_hello1/App.vue",
+    "xgroup0-part5-5.10": "cd $npm_package_config_installDir/frontend && yarn serve OMIT THIS",
 
 
-    "groupx-part3-3.4": "mkdir -p $npm_package_config_installDir/src/",
-    "groupx-part3-3.4.1": "wget -nv -O $npm_package_config_installDir/src/BlogRoll.vue $npm_package_config_raw1/main/server.go",
-    "groupx-part3-3.4.3": "wget -nv -O $npm_package_config_installDir/Post.vue $npm_package_config_build5/src/components/blog/Post.vue",    
-
-    "group1-part2-1.0": "echo begin part 2",
-    "group1-part2-1.1": "cd $npm_package_config_installDir && pwd",
-    "group1-part2-1.2": "rm -rf $npm_package_config_installDir/App.vue*",
-    "group1-part2-1.3": "rm -rf $npm_package_config_installDir/src/App.vue",
-    "group1-part2-1.4": "wget -nv -O $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue",
-    "group1-part2-1.5": "ls -lat && ls -lat $npm_package_config_installDir/src",
-    "group1-part3-1.0": "mkdir -p $npm_package_config_installDir/src/views",
-    "group1-part3-2": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue $npm_package_config_build1/src/views/Home.vue",
-    "group1-part3-3": "mkdir -p $npm_package_config_installDir/src/router",
-    "group1-part3-4": "wget -nv -O $npm_package_config_installDir/src/router/index.js $npm_package_config_build1/src/router/index.js",
-    "group1-part3-5": "echo view it or something",
-    "group1-part3-6": "echo You will have to create the folders site/header",
-    "group1-part3-7": "mkdir -p $npm_package_config_installDir/src/components/site",
-    "group1-part3-8": "mkdir -p $npm_package_config_installDir/src/components/site/header",
-    "group1-part3-9": "wget -nv -O $npm_package_config_installDir/src/components/site/header/Header.vue $npm_package_config_build1/src/components/site/header/Header.vue",
-    "group1-part3-10": "wget -nv -O $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue",
-    "group1-part3-11": "echo validate the header is visible",
-    "group1-part4-1.0": "echo really someone should look at this thing",
-    "group1-part4-1.1": "mkdir -p $npm_package_config_installDir/src/composables",
-    "group1-part4-1.2": "mkdir -p $npm_package_config_installDir/src/composables/blog",
-    "group1-part4-1.3": "wget -nv -O $npm_package_config_installDir/src/composables/blog/posts.js $npm_package_config_build1/src/composables/blog/posts.js",
-    "group1-part4-1.4": "mkdir -p $npm_package_config_installDir/src/components/blog",
-    "group1-part4-1.5": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue $npm_package_config_build1/src/components/blog/BlogRoll.vue",
-    "group1-part4-2": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue $npm_package_config_build1/src/components/blog/LatestPosts.vue",
-    "group1-part4-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue $npm_package_config_build1/src/components/blog/Post.vue",
-    "group1-part4-4": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue $npm_package_config_build1/src/views/Home.vue",
-    "group1-part4-5": "wget -nv -O $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue",
-    "group1-part4-6": "wget -nv -O $npm_package_config_installDir/src/router/index.js $npm_package_config_build1/src/App.vue",
-    "group1-part4-7": "echo everything should be working",
-    "group1-part5-1.0": "echo ok now someone look at it",
-    "group1-part5-1": "halt echo Updating the App to use the Composition API",
-    "group1-part5-2": "rm -rf $npm_package_config_installDir/src/components/HelloWorld.vue",
-    "group1-part5-3": "wget -nv -O $npm_package_config_installDir/src/components/blog/BlogRoll.vue $npm_package_config_build1/src/components/blog/BlogRoll.vue",
-    "group1-part5-4": "wget -nv -O $npm_package_config_installDir/src/components/blog/LatestPosts.vue $npm_package_config_build1/src/components/blog/LatestPosts.vue",
-    "group1-part5-5": "wget -nv -O $npm_package_config_installDir/src/components/blog/Post.vue $npm_package_config_build1/src/components/blog/Post.vue",
-    "group1-part5-6": "wget -nv -O $npm_package_config_installDir/src/views/Home.vue $npm_package_config_build1/src/App.vue",
-    "group1-part5-7": "wget -nv -O  $npm_package_config_installDir/src/App.vue $npm_package_config_build1/src/App.vue"
+    "groupx-last": "echo that is all"    
   },
   "config": {
-    "build5Name": "otherVueApp",
-    "hello1": "https://raw.githubusercontent.com/coding-to-music/go-vue-sourcefiles/e29e20ef6e2607f74f7ee914a8413d0c6f3550a1/hello-world",
-    "thumb1": "https://raw.githubusercontent.com/coding-to-music/go-vue-sourcefiles/e29e20ef6e2607f74f7ee914a8413d0c6f3550a1/go-thumbnail",
+    "hello1": "https://raw.githubusercontent.com/coding-to-music/go-vue-sourcefiles/main/hello-world",
+    "thumb1": "https://raw.githubusercontent.com/coding-to-music/go-vue-sourcefiles/main/go-thumbnail",
     "appName": "go-vue-snapshot",
     "installDir": "/home/connorstom/aprojects/go-vue-snapshot",
     "repoName": "github.com/coding-to-music/go-vue-thumbnail"
